// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders accessibility icon correctly 1`] = `
<test-file-stub
  aria-hidden={true}
/>
`;

exports[`renders accessibility icon with styles 1`] = `
<test-file-stub
  aria-hidden={true}
  style={
    Object {
      "fill": "#fff",
    }
  }
/>
`;
